# CescoGPT

./: .gitignore  Cargo.toml  LICENSE  README.md
conf/: defaults.toml
src/: lib.rs  persist.rs  talks.rs
src/talks/: basic.rs  correct.rs  deutsch.rs  lang_practice.rs  summarize.rs  translate_subs.rs
