[package]
name = "cesco-gpt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
async-openai = "0.20.0"
chrono = { version = "0.4.37", default-features = false, features = ["clock"]  }
clap = { version = "4.5.4", features = ["derive"] }
futures-util = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rustyline = "14.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
strum = "0.26.2"
strum_macros = "0.26.2"
subtp = "0.2.0"
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = "0.1.15"
toml = "0.8.12"
