[package]
name = "cesco-gpt"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
async-openai = "0.23.1"
async-stream = "0.3.5"
chrono = { version = "0.4.38", default-features = false, features = ["clock"]  }
clap = { version = "4.5.6", features = ["derive"] }
futures-util = "0.3.30"
log = "0.4.21"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
rustyline = "14.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
strum = "0.26.2"
strum_macros = "0.26.4"
subtp = "0.2.0"
teloxide = { version = "0.12.2", features = ["macros", "auto-send"] }
tokio = { version = "1.38.0", features = ["full"] }
tokio-stream = "0.1.15"
toml = "0.8.14"
